--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
     image: postgres:14.1-alpine
     restart: always
     environment:
-      - POSTGRES_USER=root
+      - POSTGRES_USER=rootls
+      -
       - POSTGRES_PASSWORD=root
     ports:
       # Standard port for PostgreSQL databases
